--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.8",
     "react-icons": "^4.7.1",
@@ -35,6 +36,8 @@
     "react-use": "^17.4.0",
     "redux": "^4.2.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.0",
+    "sweetalert2-react-content": "^5.0.7",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
