--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
     "@headlessui/react": "^1.7.7",
     "@lottiefiles/react-lottie-player": "^3.5.0",
     "@mui/material": "^5.11.1",
+    "@mui/x-data-grid": "^5.17.24",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +20,7 @@
     "@types/react-dom": "^18.0.9",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "feather-icons": "^4.29.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.10.2",
     "ky": "^0.28.5",
