--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@formkit/auto-animate": "^1.0.0-beta.6",
     "@headlessui/react": "^1.7.7",
     "@lottiefiles/react-lottie-player": "^3.5.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.1",
     "@mui/x-data-grid": "^5.17.24",
     "@reduxjs/toolkit": "^1.9.1",
