--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.9",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "feather-icons": "^4.29.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.10.2",
@@ -29,6 +31,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.8",
     "react-icons": "^4.7.1",
