--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.9",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
@@ -30,7 +31,8 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
-    "react-date-picker": "^10.0.1",
+    "react-datalist-input": "^3.2.1",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.8",
     "react-icons": "^4.7.1",
